Set "visibility" property to "hidden" by default to [fix bug 1394609]

--- a/widget/container/src/css/container-core.css
+++ b/widget/container/src/css/container-core.css
@@ -1,6 +1,7 @@
 .yui-overlay,
 .yui-panel-container {
 
+    visibility: hidden;
 	position: absolute;
 	z-index: 1;
 
